--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     <script src="./js/jquery.mask.min.js"></script>
     <script src="./js/jquery.validate.min.js"></script>
     <script src="./js/messages_pt_BR.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
